--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 requires-python = ">=3.12"
 
 dependencies = [
-    "fastapi[standard] (>=0.115.12,<0.116.0)"
+    "fastapi[standard] (>=0.115.12,<0.116.0)",
+    "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)"
 ]
 
 
