--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ requires-python = ">=3.12"
 
 dependencies = [
     "fastapi[standard] (>=0.115.12,<0.116.0)",
-    "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)"
+    "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)"
 ]
 
 
