--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard] (>=0.115.12,<0.116.0)",
     "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)",
-    "asyncpg (>=0.30.0,<0.31.0)"
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "pydantic (>=2.10.6,<3.0.0)",
+    "pydantic-settings (>=2.8.1,<3.0.0)"
 ]
 
 
